# pbAudioPlayer

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PeakMeterComponent.cpp  PeakMeterComponent.h  PluginChainComponent.cpp  PluginChainComponent.h  PluginScannerWindow.cpp  PluginScannerWindow.h  TimeScaleComponent.cpp  TimeScaleComponent.h  WaveformComponent.cpp  WaveformComponent.h
